--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Redis Config
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/MiniProject
 spring.datasource.username=postgres
 spring.datasource.password=postgres
