--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
+# server.port = 8081
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/MiniProject
 spring.datasource.username=postgres
@@ -12,3 +13,4 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
